# btznstn

./: .gitignore  CLAUDE.md  PHASE-3-DECISIONS-SUMMARY.md  PHASE-7-BR-ANALYSIS.md  PHASE-8-BR-ANALYSIS.md  PHASE_6_BR_ANALYSIS.md  PHASE_6_BR_ANALYSIS_SUMMARY.md  PHASE_6_INDEX.md  PHASE_6_QUICK_REFERENCE.md  README.md  US-3.1-IMPLEMENTATION-ANALYSIS.md  docker-compose.yml
.github/workflows/: api-ci.yml  backend-ci.yml  frontend-ci.yml  web-ci.yml
api/: .env.example  README.md  conftest.py  mypy.ini  pyproject.toml  refactor_tests.py  requirements-dev.txt  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py
api/app/: __init__.py  main.py
api/app/core/: config.py  database.py  tokens.py
api/app/models/: __init__.py  approval.py  approver_party.py  booking.py  enums.py  timeline_event.py
api/app/repositories/: __init__.py  approval_repository.py  booking_repository.py  timeline_repository.py
api/app/routers/: __init__.py  bookings.py
api/app/schemas/: __init__.py  booking.py
api/app/services/: booking_service.py
api/tests/: CLAUDE.md  __init__.py  utils.py
api/tests/fixtures/: factories.py
api/tests/integration/: test_cancel_booking.py  test_create_booking.py  test_get_booking.py  test_update_booking.py
api/tests/unit/: test_main.py
backend/: README.md  alembic.ini
backend/app/: main.py
claude/: README.md  documentation-workflow.md
docs/: README.md
docs/architecture/: ADR-AUDIT-2025-01-19.md  ADR-COMPREHENSIVE-AUDIT.md  ADR-LLM-IMPROVEMENT-PLAN.md  ADR-TEMPLATE-CORRECT.md  CLAUDE.md  README.md  adr-001-backend-framework.md  adr-002-frontend-framework.md  adr-003-database-orm-SUPERSEDED.md  adr-003-database-orm.md  adr-004-email-service.md  adr-005-ui-framework.md  adr-006-type-safety.md  adr-007-deployment-SUPERSEDED.md  adr-007-deployment.md  adr-008-testing-strategy-SUPERSEDED.md  adr-008-testing-strategy.md  (+20 more)
frontend/: README.md  package-lock.json  tailwind.config.ts
project/: BACKLOG.md  README.md  RESTRUCTURING_PLAN.md  ROADMAP.md  STATUS.md
web/: README.md  package.json
(+60 files in other folders)
